Fixed broken styles

--- a/src/components/functional/toasts-list/components/custom-toast/components/simple-toast/simple-toast.css
+++ b/src/components/functional/toasts-list/components/custom-toast/components/simple-toast/simple-toast.css
@@ -22,12 +22,15 @@
 .content-icon {
   border-radius: 50%;
   width: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 20px;
 }
 
 .content-icon svg, .content-icon img, .content-icon .fa-icon .svg-inline--fa {
-  width: 20px;
-  height: 20px;
+  width: 16px;
+  height: 16px;
 }
 
 .content-icon.success {
@@ -59,12 +62,13 @@
   gap: 12px;
   align-self: stretch;
   justify-content: space-between;
+  line-height: 16px;
 }
 
 .content-heading-title {
   color: var(--mx-toast-text-primary);
   font-family: var(--font-family-roobert);
-  font-size: 14px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 700;
   margin: 0;
@@ -73,8 +77,8 @@
 .icon-close {
   color: var(--mx-toast-text-primary);
   display: flex;
-  width: 14px;
-  height: 13.5px;
+  width: 20px;
+  height: 20px;
   flex-direction: column;
   justify-content: center;
   flex-shrink: 0;
@@ -95,7 +99,7 @@
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 16px;
+  line-height: 14px;
   letter-spacing: -0.14px;
 }
 
