--- a/src/components/functional/toasts-list/components/transaction-toast/components/transaction-toast-content/transaction-toast-content.css
+++ b/src/components/functional/toasts-list/components/transaction-toast/components/transaction-toast-content/transaction-toast-content.css
@@ -10,7 +10,6 @@
   border: 0.5px solid var(--mx-toast-border);
   background: var(--mx-toast-bg);
   backdrop-filter: blur(38px);
-  width: 100%;
 }
 
 .transaction-toast-content-wrapper.full-width {
@@ -50,12 +49,13 @@
   gap: 12px;
   align-self: stretch;
   justify-content: space-between;
+  padding: 0;
 }
 
 .transaction-toast-title {
   color: var(--mx-toast-text-primary);
   font-family: var(--font-family-roobert);
-  font-size: 14px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 700;
   line-height: 140%;
@@ -63,6 +63,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 100px;
+  margin: 0;
 }
 
 .transaction-toast-content-wrapper.full-width .transaction-toast-title {
@@ -73,7 +74,7 @@
 .transaction-toast-amount {
   color: var(--mx-toast-text-primary);
   font-family: var(--font-family-roobert);
-  font-size: 14px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 400;
   letter-spacing: -0.14px;
@@ -89,7 +90,7 @@
 .transaction-toast-details-info-text {
   color: var(--mx-toast-text-secondary);
   font-family: var(--font-family-roobert);
-  font-size: 14px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: 16px;
