--- a/src/components/functional/toasts-list/components/transaction-toast/components/transaction-toast-details/transaction-toast-details.css
+++ b/src/components/functional/toasts-list/components/transaction-toast/components/transaction-toast-details/transaction-toast-details.css
@@ -38,7 +38,7 @@
 .transaction-details-status-text {
   color: var(--mx-toast-text-primary);
   font-family: var(--font-family-roobert);
-  font-size: 14px;
+  font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: 140%; /* 19.6px */
